--- a/EpicSchoolHomework/Views/Profile/UserProfileViewController.xib
+++ b/EpicSchoolHomework/Views/Profile/UserProfileViewController.xib
@@ -30,17 +30,27 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="82e-mV-Hhb">
-                    <rect key="frame" x="142" y="505.5" width="130.5" height="44"/>
+                    <rect key="frame" x="159.5" y="486.5" width="95.5" height="44"/>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="К фоткам">
+                    <buttonConfiguration key="configuration" style="plain" title="Фотки">
                         <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle1"/>
                     </buttonConfiguration>
                     <connections>
                         <action selector="navigateToPhotoListTapped:" destination="-1" eventType="touchUpInside" id="6Dt-OG-ATW"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wRv-vG-W8H">
+                    <rect key="frame" x="162" y="555" width="90.5" height="44"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Карта">
+                        <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle1"/>
+                    </buttonConfiguration>
+                    <connections>
+                        <action selector="navigateToAllItemsMapTapped:" destination="-1" eventType="touchUpInside" id="0x9-UL-Icc"/>
+                    </connections>
+                </button>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="7H6-6a-3dV">
-                    <rect key="frame" x="20" y="144" width="374" height="311.5"/>
+                    <rect key="frame" x="20" y="144" width="374" height="292.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="lmy-qO-hSw" userLabel="EmailPassword">
                             <rect key="frame" x="68.5" y="0.0" width="237.5" height="150"/>
@@ -103,14 +113,14 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="t1J-Gs-WZ2" userLabel="CurrentUser">
-                            <rect key="frame" x="123.5" y="191" width="127" height="48.5"/>
+                            <rect key="frame" x="123.5" y="191" width="127" height="29.5"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lys-D9-FqB">
-                                    <rect key="frame" x="54" y="1.5" width="19" height="17.5"/>
+                                    <rect key="frame" x="63" y="0.0" width="1" height="1"/>
                                     <imageReference key="image" image="person" catalog="system" symbolScale="medium"/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="user@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ubq-8k-Jfm">
-                                    <rect key="frame" x="0.0" y="28" width="127" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="9" width="127" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -118,7 +128,7 @@
                             </subviews>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ie3-0C-HxU">
-                            <rect key="frame" x="154.5" y="280.5" width="65" height="31"/>
+                            <rect key="frame" x="154.5" y="261.5" width="65" height="31"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Войти"/>
                             <connections>
@@ -133,9 +143,11 @@
             <constraints>
                 <constraint firstItem="82e-mV-Hhb" firstAttribute="top" secondItem="7H6-6a-3dV" secondAttribute="bottom" constant="50" id="IVh-qe-JUF"/>
                 <constraint firstItem="7H6-6a-3dV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Kvw-Bw-bTl"/>
+                <constraint firstItem="wRv-vG-W8H" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NJb-bd-Fkp"/>
                 <constraint firstItem="7H6-6a-3dV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="RUM-4D-N4Q"/>
                 <constraint firstItem="82e-mV-Hhb" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="UoB-JJ-VjM"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7H6-6a-3dV" secondAttribute="trailing" constant="20" id="fWR-zJ-ghf"/>
+                <constraint firstItem="wRv-vG-W8H" firstAttribute="top" secondItem="82e-mV-Hhb" secondAttribute="bottom" constant="24.5" id="kfM-vy-RqY"/>
                 <constraint firstItem="7H6-6a-3dV" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="wm5-Yg-m5T"/>
             </constraints>
             <point key="canvasLocation" x="139" y="115"/>
