--- a/EpicSchoolHomework/Views/EditItem/EditItemViewController.xib
+++ b/EpicSchoolHomework/Views/EditItem/EditItemViewController.xib
@@ -17,9 +17,10 @@
                 <outlet property="imageLoadingIndicator" destination="6CY-Ar-b2d" id="4uK-ha-XZh"/>
                 <outlet property="mapView" destination="Jme-On-CIZ" id="KFI-6o-qCS"/>
                 <outlet property="photoImageView" destination="eOP-M4-7A9" id="OOm-bL-Nrd"/>
-                <outlet property="postItemButton" destination="eco-st-wGK" id="ahN-fV-OEv"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="visitedInfoLabel" destination="jQO-y6-6eW" id="bdx-BB-Kkc"/>
                 <outlet property="visitedSwitch" destination="0W5-ae-ALU" id="NCj-uD-twj"/>
+                <outlet property="visitedSwitchLabel" destination="LOR-UO-PzD" id="Dvc-mC-wI0"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -27,37 +28,32 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eco-st-wGK">
-                    <rect key="frame" x="147" y="845" width="120" height="31"/>
-                    <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Опубликовать"/>
-                    <connections>
-                        <action selector="postItemButtonTapped:" destination="-1" eventType="touchUpInside" id="D8p-z3-Hs3"/>
-                    </connections>
-                </button>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Описание" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0zm-qC-zi7">
-                    <rect key="frame" x="20" y="797" width="374" height="34"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Название (обязательно)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0zm-qC-zi7">
+                    <rect key="frame" x="20" y="818" width="374" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eOP-M4-7A9">
                     <rect key="frame" x="20" y="44" width="374" height="399"/>
                 </imageView>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="6CY-Ar-b2d" userLabel="Loading Activity Indicator">
+                    <rect key="frame" x="188.5" y="225" width="37" height="37"/>
+                </activityIndicatorView>
                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Jme-On-CIZ">
-                    <rect key="frame" x="20" y="453" width="374" height="290"/>
+                    <rect key="frame" x="20" y="453" width="374" height="277.5"/>
                 </mapView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Kl-yJ-A5V" userLabel="center map">
-                    <rect key="frame" x="198" y="580" width="18.5" height="36"/>
+                    <rect key="frame" x="198" y="574" width="18.5" height="36"/>
                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="Wgo-gG-GmU">
-                    <rect key="frame" x="20" y="751" width="374" height="31"/>
+                    <rect key="frame" x="20" y="738.5" width="374" height="31"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xoU-qN-dSU" userLabel="Distance">
                             <rect key="frame" x="0.0" y="0.0" width="215" height="31"/>
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" systemColor="secondaryLabelColor"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -75,31 +71,35 @@
                         </switch>
                     </subviews>
                 </stackView>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="6CY-Ar-b2d" userLabel="Loading Activity Indicator">
-                    <rect key="frame" x="188.5" y="225" width="37" height="37"/>
-                </activityIndicatorView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Для отметки посещения необходимо быть не дальше 10 метров от точки съемки. Такие правила. Движение - жизнь." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQO-y6-6eW">
+                    <rect key="frame" x="20" y="777.5" width="374" height="30.5"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="0zm-qC-zi7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="2Cn-05-Esh"/>
-                <constraint firstItem="eco-st-wGK" firstAttribute="top" secondItem="0zm-qC-zi7" secondAttribute="bottom" constant="14" id="2id-8d-jKG"/>
                 <constraint firstItem="9Kl-yJ-A5V" firstAttribute="centerX" secondItem="Jme-On-CIZ" secondAttribute="centerX" id="2rk-dF-TMO"/>
-                <constraint firstItem="eco-st-wGK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="4bC-y0-bdl"/>
                 <constraint firstItem="Wgo-gG-GmU" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="AU4-8P-5HP"/>
                 <constraint firstItem="Jme-On-CIZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="CYu-Td-wwG"/>
-                <constraint firstAttribute="bottom" secondItem="eco-st-wGK" secondAttribute="bottom" constant="20" id="Ljw-I5-xqH"/>
                 <constraint firstItem="Wgo-gG-GmU" firstAttribute="top" secondItem="Jme-On-CIZ" secondAttribute="bottom" constant="8" symbolic="YES" id="MgE-AI-F30"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="jQO-y6-6eW" secondAttribute="trailing" constant="20" id="N9S-o5-dnn"/>
                 <constraint firstItem="6CY-Ar-b2d" firstAttribute="centerX" secondItem="eOP-M4-7A9" secondAttribute="centerX" id="QA2-a7-bKF"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="0zm-qC-zi7" secondAttribute="bottom" constant="10" id="TuC-ZK-Sur"/>
                 <constraint firstItem="eOP-M4-7A9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Uf0-Lb-N03"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eOP-M4-7A9" secondAttribute="trailing" constant="20" id="Yc4-tW-6Jl"/>
                 <constraint firstItem="9Kl-yJ-A5V" firstAttribute="centerY" secondItem="Jme-On-CIZ" secondAttribute="centerY" id="ZGy-gi-rBL"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Wgo-gG-GmU" secondAttribute="trailing" constant="20" id="ZTU-1b-NMc"/>
                 <constraint firstItem="6CY-Ar-b2d" firstAttribute="centerY" secondItem="eOP-M4-7A9" secondAttribute="centerY" id="aKd-aM-Gbs"/>
-                <constraint firstItem="0zm-qC-zi7" firstAttribute="top" secondItem="Wgo-gG-GmU" secondAttribute="bottom" constant="15" id="b17-O4-2w0"/>
                 <constraint firstItem="eOP-M4-7A9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="dxd-y9-8JM"/>
                 <constraint firstItem="Jme-On-CIZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="fqM-CS-DPL"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="0zm-qC-zi7" secondAttribute="trailing" constant="20" id="fzP-vY-meq"/>
+                <constraint firstItem="jQO-y6-6eW" firstAttribute="top" secondItem="Wgo-gG-GmU" secondAttribute="bottom" constant="8" symbolic="YES" id="h37-tn-S6U"/>
+                <constraint firstItem="jQO-y6-6eW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="i8Y-2L-IpH"/>
+                <constraint firstItem="0zm-qC-zi7" firstAttribute="top" secondItem="jQO-y6-6eW" secondAttribute="bottom" constant="10" id="m0F-pi-ffJ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Jme-On-CIZ" secondAttribute="trailing" constant="20" id="oKa-Ia-fla"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="centerY" secondItem="eOP-M4-7A9" secondAttribute="bottom" constant="10" id="twT-ky-jUs"/>
             </constraints>
